changed conn string

--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=azhftestwebapp-server.database.windows.net,1433;Initial Catalog=azhftestwebapp-database;User ID=azhftestwebapp-server-admin;Password=M11ZE30A27EQ6RDY$"
   }
 } 
